# Universal_Robots_ROS2_Driver

./: Universal_Robots_ROS2_Driver.humble.repos
ur_moveit_config/: CMakeLists.txt
ur_moveit_config/config/: bimanual_controllers.yaml  bimanual_joint_limits.yaml  bimanual_kinematics.yaml  bimanual_ompl_planning.yaml  ur_servo.yaml
ur_moveit_config/launch/: bimanual_ur_moveit.launch.py  ur_moveit.launch.py
ur_moveit_config/rviz/: view_robot.rviz
ur_moveit_config/src/: non_servo_teleop.cpp  teleop_command_publisher.cpp
ur_moveit_config/srdf/: bimanual_ur.srdf.xacro
ur_robot_driver/config/: bimanual_ur_controllers.yaml
ur_robot_driver/launch/: ur10e.launch.py  ur_control.launch.py
